syntax = "proto3";

package pb;

option go_package = "seckill/pb;pb";

service UserService {
    rpc CheckUser(UserRequest) returns (UserResponse) {}
}

message UserRequest {
    string userName = 1;
    string password = 2;
}

message UserResponse {
    bool result = 1;
    int64 userId = 2;
    string err = 3;
}